# ACode

./: .gitignore  README.md  index.html  package-lock.json  package.json  todo.md  vite.config.ts
.acode/: sessions.json
docs/: architecture.md  contributing.md
docs/design/: design-system.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ide_mcp.rs  lib.rs  main.rs  mcp.rs
src-tauri/src/git/: github.rs  local.rs  mod.rs  types.rs
src/components/claude/: ClaudeChat.css  ClaudeChat.tsx  McpStatusPanel.css  McpStatusPanel.tsx
src/components/contextmenu/: ContextMenu.css  ContextMenu.tsx
src/components/editor/: DiffViewer.css  DiffViewer.tsx  EditAnimation.ts  EditorPane.css  EditorPane.tsx  EditorTabBar.css  EditorTabBar.tsx  HexEditor.css  HexEditor.tsx  MarkdownPreview.css  MarkdownPreview.tsx  UnsavedChangesDialog.css  UnsavedChangesDialog.tsx
src/components/github/: ActionsListView.tsx  GitHubAuthGate.tsx  GitHubPanel.css  GitHubPanel.tsx  IssueDetailView.tsx  IssueListView.tsx  PrDetailView.tsx  PrListView.tsx
src/components/icons/: ClaudeIcon.tsx
src/components/layout/: ResizeHandle.css  ResizeHandle.tsx  RootLayout.css  RootLayout.tsx  TitleBarLogo.css  TitleBarLogo.tsx  WindowControls.css  WindowControls.tsx
src/components/notifications/: BannerToast.css  BannerToast.tsx  NotificationCenter.css  NotificationCenter.tsx
src/components/pillbar/: PillBar.css  PillBar.tsx  PillCollapsed.tsx  PillExpanded.tsx  PillItem.tsx  PillPanel.tsx  PillPullTab.tsx  PillSessionContext.tsx
src/components/projects/: ProjectsRail.css  ProjectsRail.tsx
src/components/settings/: McpServersSection.css  McpServersSection.tsx  SettingsScreen.css  SettingsScreen.tsx
src/components/sidebar/: FileExplorer.css  FileExplorer.tsx  Sidebar.css  Sidebar.tsx  SidebarContent.css  SidebarContent.tsx  SidebarIconRail.css  SidebarIconRail.tsx
src/services/: ideMcpHandler.ts  tauri.ts
src/store/: activityStore.ts  claudeStore.ts  editorStore.ts  gitStore.ts  githubStore.ts  layoutStore.ts  mcpStore.ts  notificationStore.ts  settingsStore.ts  terminalStore.ts
src/styles/: tokens.css
src/utils/: ansiToHtml.ts  clipboard.ts  fileIcons.tsx  projectAvatar.ts
(+10 files in other folders)
