[package]
name = "acode"
version = "1.5.0"
description = "Aidan's Custom IDE"
authors = ["arcar"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "acode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
window-vibrancy = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
portable-pty = "0.8"
nix = { version = "0.29", features = ["signal"] }
tauri-plugin-os = "2.3.2"
git2 = "0.19"
octocrab = "0.44"
tokio = { version = "1", features = ["full"] }
notify = "7"
notify-debouncer-mini = "0.5"
base64 = "0.22"
rfd = "0.15"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-clipboard-manager = "2.3.2"

